# subgen-cli

./: .gitignore  CHANGELOG.md  DISTRIBUTION_REVIEW.md  LICENSE  README.md  TODO.md  cli.py  pyproject.toml  requirements.txt
example/: marguerite duras on bresson.mkv  marguerite duras on bresson.subgen.medium.fre.srt
src/subgen-cli/: cli.py
src/subgen_cli/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_file_detection.py  test_language.py  test_transcription.py
