[project]
name = "subgen-cli"
dynamic = ["version"]
description = "Standalone command-line interface for subtitle generation"
authors = [
    { name = "seanmwv", email = "p@smwv.dev"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies= [
    "ffmpeg_python>=0.2.0,<1.0",
    "stable_ts[fw]>=2.19.0,<3.0",
    "torch>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0.0",
]

[project.scripts]
subgen = "subgen_cli.cli:main"

[project.urls]
Homepage = "https://github.com/seanmwv/subgen-cli"
Repository = "https://github.com/seanmwv/subgen-cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/subgen_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/subgen_cli"]
exclude = [
    "example/",
]

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]